[gd_scene load_steps=28 format=2]

[ext_resource path="res://Entity/Entity.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entity/Enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Resources/DeathAnimations/BlueCircleExplosions/Explosion_blue_circle6.png" type="Texture" id=3]
[ext_resource path="res://Resources/DeathAnimations/BlueCircleExplosions/Explosion_blue_circle7.png" type="Texture" id=4]
[ext_resource path="res://Resources/DeathAnimations/BlueCircleExplosions/Explosion_blue_circle8.png" type="Texture" id=5]
[ext_resource path="res://Resources/DeathAnimations/BlueCircleExplosions/Explosion_blue_circle9.png" type="Texture" id=6]
[ext_resource path="res://Resources/DeathAnimations/BlueCircleExplosions/Explosion_blue_circle10.png" type="Texture" id=7]
[ext_resource path="res://Resources/DeathAnimations/BlueCircleExplosions/Explosion_blue_circle1.png" type="Texture" id=8]
[ext_resource path="res://Resources/DeathAnimations/BlueCircleExplosions/Explosion_blue_circle3.png" type="Texture" id=9]
[ext_resource path="res://Resources/DeathAnimations/BlueCircleExplosions/Explosion_blue_circle4.png" type="Texture" id=10]
[ext_resource path="res://Resources/DeathAnimations/BlueCircleExplosions/Explosion_blue_circle5.png" type="Texture" id=11]
[ext_resource path="res://Resources/DeathAnimations/BlueCircleExplosions/Explosion_blue_circle2.png" type="Texture" id=12]
[ext_resource path="res://Resources/DeathAnimations/Bloodsplatter.png" type="Texture" id=13]
[ext_resource path="res://Resources/SoundEffects/mdeath2.wav" type="AudioStream" id=14]

[sub_resource type="CircleShape2D" id=2]
resource_local_to_scene = true
radius = 50.0

[sub_resource type="CircleShape2D" id=3]
radius = 100.0

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 256, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 384, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 512, 128, 128, 128 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "blood_splatter",
"speed": 12.0
} ]

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": false,
"name": "blue_explosion",
"speed": 18.0
} ]

[node name="Enemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )
bonus_letters = 0

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="." index="2"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource( 3 )

[node name="BloodSplatter" type="AnimatedSprite" parent="." index="3"]
visible = false
frames = SubResource( 4 )
animation = "blood_splatter"
offset = Vector2( 0, -30 )

[node name="DeathExplosion" type="AnimatedSprite" parent="." index="4"]
visible = false
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 14 )
animation = "blue_explosion"
offset = Vector2( 4, -6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="6"]
stream = ExtResource( 14 )
volume_db = 5.0

[connection signal="animation_finished" from="BloodSplatter" to="." method="_on_BloodSplatter_animation_finished"]
[connection signal="animation_finished" from="DeathExplosion" to="." method="_on_DeathAnimations_animation_finished"]
